Fix relative path for Nineteen